[package]
name = "dbi_dbg"
version = "0.1.0"
authors = ["Nick Gregory <computerfreak97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
xmas-elf = "0.7.0"
iced-x86 = "1.0.1"
mmap = "0.1.1"
